--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -61,7 +61,6 @@
                     android:layout_height="120dp"
                     android:layout_marginTop="15dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.498"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:src="@tools:sample/avatars" />
@@ -94,20 +93,21 @@
             <ProgressBar
                 android:id="@+id/uploadProgressBar"
                 style="?android:attr/progressBarStyleLarge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="35dp"
+                android:indeterminateTint="@color/primary"
                 android:layout_gravity="center"
                 android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <View
                 android:id="@+id/interactionBlocker"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/opaquewhite"
+                android:background="#1AFFFFFF"
                 android:clickable="false"
                 android:focusable="true"
                 android:visibility="gone" />
