--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -13,7 +13,7 @@
         android:layout_height="250dp"
         android:layout_marginTop="5dp"
         android:scaleType="fitXY"
-        android:src="@raw/clockanimation"
+        android:src="@raw/calendaranimation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
